--- a/styles/globals.css
+++ b/styles/globals.css
@@ -223,3 +223,15 @@ box-shadow: 0 10px 40px -10px rgba(0,64,128,.09);
  
   width: 200px !important;
 }
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  unicode-bidi: isolate;
+  text-align : justify  !important;
+}
+.w-50 {
+  width: 35% !important;
+}
